--- a/templates/home.html
+++ b/templates/home.html
@@ -1,9 +1,11 @@
 {% extends "base.html" %}
 {% block body %}
-{% include "navbar.html" %}
-<section class="hero is-primary is-bold is-large">
-    <div class="hero-body"></div>
-</section>
+<div>
+    <form id="emit" method="POST" action='#'>
+        <input type="text" name="emit_data" id="emit_data" placeholder="Message">
+        <input type="submit" value="Echo">
+    </form>
+</div>
 {% endblock %}
 {% block scripts %}
 <script src="../static/js/scripts.js"></script>
