--- a/templates/home.html
+++ b/templates/home.html
@@ -1,12 +1,90 @@
 {% extends "base.html" %}
+{% block title %} Home {% endblock %}
+{% block head %}
+{{ super() }}
+<style>
+    .main {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        align-content: center;
+    }
+
+    .icon {
+        width: 100px;
+    }
+
+    .separator {
+        display: flex;
+        align-items: center;
+        text-align: center;
+        width: 500px;
+    }
+
+    .separator::before,
+    .separator::after {
+        content: '';
+        flex: 1;
+        border-bottom: 1px dotted #000;
+    }
+
+    .separator::before {
+        margin-right: .25em;
+    }
+
+    .separator::after {
+        margin-left: .25em;
+    }
+</style>
+{% endblock %}
 {% block body %}
-<div>
-    <form id="emit" method="POST" action='#'>
-        <input type="text" name="emit_data" id="emit_data" placeholder="Message">
-        <input type="submit" value="Echo">
+<div class="main">
+    <img class="icon" src="{{url_for('static', filename='logo_transparent.png')}}" />
+    <br />
+    <button class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored" onclick="createGame()">Create
+        Lobby
+    </button>
+    <br />
+    <div class="separator">Or...</div>
+    <p>Join an existing room with a code</p>
+    <form id="code_form">
+        <div class="mdl-textfield mdl-js-textfield">
+            <input class="mdl-textfield__input" type="text" id="room_code">
+            <label class="mdl-textfield__label" for="sample1">Enter Code Here</label>
+        </div>
     </form>
 </div>
-{% endblock %}
-{% block scripts %}
-<script src="../static/js/scripts.js"></script>
+<div class="lobbyView" style="display:none;">
+
+</div>
+
+<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.6/socket.io.min.js"></script>
+<script type="text/javascript" charset="utf-8">
+    document.getElementById("code_form").onsubmit = function (event) {
+        code = document.getElementById("room_code").value
+        socket.emit('join_room', { room: code })
+        event.preventDefault()
+    }
+    var socket = io.connect('http://' + document.domain + ':' + location.port);
+    // verify our websocket connection is established
+    socket.on('connect', function () {
+        console.log('Websocket connected!');
+    });
+    socket.on('room', function (msg) {
+        console.log(msg);
+        console.log("CONNECTED")
+    });
+    // message handler for the 'join_room' channel
+    socket.on('join_room', function (msg) {
+        console.log(msg);
+        // window.location = "/" + msg['room']
+    });
+    // createGame onclick - emit a message on the 'create' channel to 
+    // create a new game with default parameters
+    function createGame() {
+        console.log('Creating game...');
+        socket.emit('create', { size: 1 });
+    }
+</script>
 {% endblock %}
